Fixes dark mode hover

--- a/http_src/views/private/clients/dark-mode.scss
+++ b/http_src/views/private/clients/dark-mode.scss
@@ -356,8 +356,8 @@ ul.navbar-nav li.nav-item.active>a.active {
 }
 
 .dropdown-menu .dropdown-item:hover {
-  background-color: #0d1117 !important;
-  color: #E2E2E2;
+  background-color: #E2E2E2 !important;
+  color: #0D1117;
 }
 
 .popover {
